--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
               <ul class="st-nav-list st-onepage-nav">
                 <li><a href="#home" class="st-smooth-move active">Home</a></li>
                 <li><a href="#about" class="st-smooth-move">About</a></li>
-                <li><a href="#song" class="st-smooth-move">My Song</a></li>
+                <li><a href="#song" class="st-smooth-move">Gallery</a></li>
                 <li><a href="#contact" class="st-smooth-move">Contact</a></li>
               </ul>
               <div class="sp-phone">
                 <svg viewBox="0 0 513.64 513.64">
                   <g>
                     <g>
-                      <path d="M499.66,376.96l-71.68-71.68c-25.6-25.6-69.12-15.359-79.36,17.92c-7.68,23.041-33.28,35.841-56.32,30.72c-51.2-12.8-120.32-79.36-133.12-133.12c-7.68-23.041,7.68-48.641,30.72-56.32c33.28-10.24,43.52-53.76,17.92-79.36l-71.68-71.68c-20.48-17.92-51.2-17.92-69.12,0l-48.64,48.64c-48.64,51.2,5.12,186.88,125.44,307.2c120.32,120.32,256,176.641,307.2,125.44l48.64-48.64C517.581,425.6,517.581,394.88,499.66,376.96z" />
+                      <path
+                        d="M499.66,376.96l-71.68-71.68c-25.6-25.6-69.12-15.359-79.36,17.92c-7.68,23.041-33.28,35.841-56.32,30.72c-51.2-12.8-120.32-79.36-133.12-133.12c-7.68-23.041,7.68-48.641,30.72-56.32c33.28-10.24,43.52-53.76,17.92-79.36l-71.68-71.68c-20.48-17.92-51.2-17.92-69.12,0l-48.64,48.64c-48.64,51.2,5.12,186.88,125.44,307.2c120.32,120.32,256,176.641,307.2,125.44l48.64-48.64C517.581,425.6,517.581,394.88,499.66,376.96z" />
                     </g>
                   </g>
                 </svg>
@@ -73,7 +74,7 @@
     <!-- Hero Image - Social Link Group -->
     <div class="st-hero-img st-to-right">
       <img class="wow fadeInRight" src="assets/img/section/hero-img.jpg" alt="Hero">
-     
+
     </div>
     <div id="particles-js"></div>
   </section>
@@ -104,17 +105,19 @@
                 <h2 class="st-text-block-title">Hi There</h2>
                 <h4 class="st-text-block-subtitle">Pop Singer</h4>
                 <div class="st-text-block-text">
-                  <p>I'm a pop singer with a passion for creating catchy melodies and infectious rhythms. My music blends vibrant energy with relatable lyrics, aiming to connect with listeners on a personal level. Join me on this journey as I bring my unique sound to the world!</p>
+                  <p>I'm a pop singer with a passion for creating catchy melodies and infectious rhythms. My music
+                    blends vibrant energy with relatable lyrics, aiming to connect with listeners on a personal level.
+                    Join me on this journey as I bring my unique sound to the world!</p>
                 </div>
                 <ul class="st-text-block-details st-mp0">
-                 <li><span>Phone</span> : <span>+1 876-369-9009</span></li>
+                  <li><span>Phone</span> : <span>+1 876-369-9009</span></li>
                   <li><span>Email</span> : <span>support-beatbridge@gmail.com</span></li>
                   <li><span>Location</span> : <span>Bear Creek</span></li>
                   <li><span>Style</span> : <span>Catchy melodies and heartfelt lyrics</span></li>
                   <li><span>Mission</span> : <span>Connect through relatable themes</span></li>
                 </ul>
                 <div class="st-text-block-btn">
-                  <a href="#song" class="st-btn st-style1 st-color1">Hear My Song</a>
+                  <a href="#song" class="st-btn st-style1 st-color1">View Gallery</a>
                 </div>
               </div>
             </div>
@@ -146,7 +149,8 @@
               <img src="assets/img/guitar.png" alt="">
             </div>
             <h2 class="st-iconbox-title">Guitar</h2>
-            <div class="st-iconbox-text">Explore the world of music with my guitar skills, from melodic solos to rhythmic beats.</div>
+            <div class="st-iconbox-text">Explore the world of music with my guitar skills, from melodic solos to
+              rhythmic beats.</div>
           </div>
           <div class="st-height-b30 st-height-lg-b30"></div>
         </div><!-- .col -->
@@ -157,7 +161,8 @@
 
             </div>
             <h2 class="st-iconbox-title">Vocal</h2>
-            <div class="st-iconbox-text">Discover my vocal abilities, ranging from energetic performances to heartfelt emotional expression.</div>
+            <div class="st-iconbox-text">Discover my vocal abilities, ranging from energetic performances to heartfelt
+              emotional expression.</div>
           </div>
           <div class="st-height-b30 st-height-lg-b30"></div>
         </div><!-- .col -->
@@ -168,7 +173,8 @@
 
             </div>
             <h2 class="st-iconbox-title">Composing</h2>
-            <div class="st-iconbox-text">Discover my music composition skills, spanning orchestral to electronic styles.</div>
+            <div class="st-iconbox-text">Discover my music composition skills, spanning orchestral to electronic styles.
+            </div>
           </div>
           <div class="st-height-b30 st-height-lg-b30"></div>
         </div><!-- .col -->
@@ -196,7 +202,12 @@
             <div class="st-skill-heading">
               <h2 class="st-skill-title">All the skills I bring to my work as a pop singer are highlighted.</h2>
               <div class="st-skill-subtitle">
-                A successful pop singer possesses strong vocal techniques, including breath control and pitch accuracy, allowing them to deliver captivating performances. Their engaging stage presence and emotional expression help connect with audiences on a personal level.<br><br> Additionally, songwriting skills enable them to create catchy melodies and relatable lyrics that resonate with fans. Collaborating effectively with producers and using social media to build a fan base are also essential in today's music industry
+                A successful pop singer possesses strong vocal techniques, including breath control and pitch accuracy,
+                allowing them to deliver captivating performances. Their engaging stage presence and emotional
+                expression help connect with audiences on a personal level.<br><br> Additionally, songwriting skills
+                enable them to create catchy melodies and relatable lyrics that resonate with fans. Collaborating
+                effectively with producers and using social media to build a fan base are also essential in today's
+                music industry
               </div>
             </div><!-- .st-skill-heading -->
           </div>
@@ -210,7 +221,8 @@
             <div class="st-single-progressbar">
               <div class="st-progressbar-heading">
                 <h3 class="st-progressbar-title">Vocal Skills</h3>
-                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">75%</div>
+                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">75%
+                </div>
               </div>
               <div class="st-progressbar" data-progress="75">
                 <div class="st-progressbar-in wow fadeInLeft"></div>
@@ -220,7 +232,8 @@
             <div class="st-single-progressbar">
               <div class="st-progressbar-heading">
                 <h3 class="st-progressbar-title">Performance Skills</h3>
-                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">65%</div>
+                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">65%
+                </div>
               </div>
               <div class="st-progressbar" data-progress="65">
                 <div class="st-progressbar-in wow fadeInLeft"></div>
@@ -230,7 +243,8 @@
             <div class="st-single-progressbar">
               <div class="st-progressbar-heading">
                 <h3 class="st-progressbar-title">Songwriting and Composition</h3>
-                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">60%</div>
+                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">60%
+                </div>
               </div>
               <div class="st-progressbar" data-progress="60">
                 <div class="st-progressbar-in wow fadeInLeft"></div>
@@ -240,7 +254,8 @@
             <div class="st-single-progressbar">
               <div class="st-progressbar-heading">
                 <h3 class="st-progressbar-title">Musical Knowledge</h3>
-                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">65%</div>
+                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">65%
+                </div>
               </div>
               <div class="st-progressbar" data-progress="65">
                 <div class="st-progressbar-in wow fadeInLeft"></div>
@@ -250,7 +265,8 @@
             <div class="st-single-progressbar">
               <div class="st-progressbar-heading">
                 <h3 class="st-progressbar-title">Adaptability</h3>
-                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">70%</div>
+                <div class="st-progressbar-percentage wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">70%
+                </div>
               </div>
               <div class="st-progressbar" data-progress="70">
                 <div class="st-progressbar-in wow fadeInLeft"></div>
@@ -270,33 +286,49 @@
     <div class="st-height-b100 st-height-lg-b80"></div>
     <div class="container">
       <div class="st-section-heading st-style1">
-        <h4 class="st-section-heading-title">My Song</h4>
-        <h2 class="st-section-heading-subtitle">My Song</h2>
+        <h4 class="st-section-heading-title">Gallery</h4>
+        <h2 class="st-section-heading-subtitle">Gallery</h2>
       </div>
       <div class="st-height-b25 st-height-lg-b25"></div>
     </div>
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-6 col-md-6">
-          <div class="st-song-single st-style1 st-lightgallery">
-            <div class="st-song-item">
-              <!-- <a href="assets/video/song.mov" class="st-song st-zoom st-lightbox-item"> -->
-                <div class="st-song-img st-zoom-in">
-                  <video controls>
-                    <source src="assets/video/IMG_3859.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                  </video>
+      <div class="row ">
+        <div class="col-lg-4 col-md-6">
+          <div class="st-portfolio-single st-style1">
+            <div class="st-portfolio-item">
+              <!-- <a href="assets/img/268EFBF4-967B-438F-91C8-2D8CF7A6054E.jpeg" class="st-portfolio st-zoom st-lightbox-item"> -->
+                <div class="st-portfolio-img st-zoom-in">
+                  <img src="assets/img/268EFBF4-967B-438F-91C8-2D8CF7A6054E.jpeg" alt="portfolio">
                 </div>
-                <!-- <div class="st-song-item-hover">
-                  <i class="fas fa-plus-circle"></i>
-                  <h5>Song Name</h5>
-                  <p>Fall in the Stars</p>
-                </div> -->
+              <!-- </a> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="st-portfolio-single st-style1">
+            <div class="st-portfolio-item">
+              <!-- <a href="assets/img/42784B55-96D4-4039-982E-A16596592B71.jpeg" class="st-portfolio st-zoom st-lightbox-item"> -->
+                <div class="st-portfolio-img st-zoom-in">
+                  <img src="assets/img/42784B55-96D4-4039-982E-A16596592B71.jpeg" alt="portfolio">
+                </div>
+              <!-- </a> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="st-portfolio-single st-style1">
+            <div class="st-portfolio-item">
+              <!-- <a href="assets/img/AC73286C-3A6B-4796-B753-7759524036AD.jpeg" class="st-portfolio st-zoom st-lightbox-item"> -->
+                <div class="st-portfolio-img st-zoom-in">
+                  <img src="assets/img/AC73286C-3A6B-4796-B753-7759524036AD.jpeg" alt="portfolio">
+                </div>
               <!-- </a> -->
             </div>
           </div>
         </div>
       </div>
+    </div>
+    </div>
     </div>
     <div class="st-height-b100 st-height-lg-b80"></div>
   </section>
